# orya-eval

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
examples/: README.md
examples/classification/: config.yaml  data.csv  failing_thresholds.yaml
examples/comparison/: classification_baseline.json  classification_candidate.json
examples/regression/: config.yaml  data.csv
examples/text/: config.yaml  data.jsonl
orya_eval/: __init__.py  __main__.py  cli.py  comparison.py  config.py  exceptions.py  runner.py  templates.py
orya_eval/io/: __init__.py  data.py  files.py
orya_eval/metrics/: __init__.py  registry.py  text.py
orya_eval/models/: __init__.py  results.py
orya_eval/reporting/: __init__.py  markdown.py  terminal.py
orya_eval/tasks/: __init__.py  _common.py  classification.py  regression.py  text.py
tests/: conftest.py  test_cli.py  test_comparison.py  test_config.py  test_io_and_reporting.py  test_tasks.py
